# insee-client

./: .gitignore  README.md  example.env  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
src/: config.py
src/pyinsee/: __init__.py  _version.py  config.py  insee_cli.py  insee_client.py  logger.py  setup_cli.py  utils.py
